# Precize

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sections_example.json  test_more_edits.py  test_real_generation.py  test_real_llm.py  test_simple_block_gen.py  test_simple_llm.py  test_small_gen.py
docs/: README.md  api.md  architecture.md  cli.md  configuration.md  editing.md  extending.md  generation.md  installation.md  logging.md  mermaid.md  orchestrator.md  quickstart.md  tools.md  troubleshooting.md  usage.md
images/: mermaid-1-1-Test_Mermaid_Saving___Part_1.mmd  mermaid-1-1-The_Light_Switch_Analogy__Unde.mmd  mermaid-1-1-The_Problem_of_Overlapping_Wor.mmd  mermaid-1-2-Test_Mermaid_Saving___Part_1.mmd  mermaid-10-1-Calculating_Resistors_for_a_Sw.mmd  mermaid-10-1-Classic_Problem_2__The_0_1_Kna.mmd  mermaid-10-2-Calculating_Resistors_for_a_Sw.mmd  mermaid-11-1-The_Emitter_Follower__Voltage_.mmd  mermaid-11-1-Visualizing_the_Knapsack_Decis.mmd  mermaid-11-2-Visualizing_the_Knapsack_Decis.mmd  mermaid-12-1-Space_Optimization__Shrinking_.mmd  mermaid-12-1-The_Common_Emitter_Amplifier__.mmd  mermaid-12-2-The_Common_Emitter_Amplifier__.mmd  mermaid-13-1-Pattern_Recognition__Unbounded.mmd  mermaid-13-1-Understanding_Load_Lines__Visu.mmd  mermaid-13-2-Understanding_Load_Lines__Visu.mmd  mermaid-14-1-Classic_Problem_3__Longest_Com.mmd  mermaid-14-1-Heat_is_the_Enemy__Power_Dissi.mmd  mermaid-15-1-Introduction_to_MOSFETs__The_M.mmd  mermaid-15-1-String_Matching_Logic__The_LCS.mmd  mermaid-15-2-Introduction_to_MOSFETs__The_M.mmd  (+40 more)
output/: sets.md  (+3 more)
(+55 files in other folders)
